--- a/src/components/header/Header.module.css
+++ b/src/components/header/Header.module.css
@@ -1,8 +1,8 @@
 @media (min-width: 1200px) {
     .header {
         grid-column: 1 / 13; 
-        display: flex; 
-        flex-direction: column;              
+        flex-direction: column; 
+        display: grid;             
         width: 100%;
         height: auto;
         background-image: url('../../assets/imgbanner.png');
@@ -181,7 +181,7 @@
 
 @media (max-width: 768px) and (min-width: 576px) {
     .header {
-        grid-column: 1 /13;
+        grid-column: 1 / 13;
         width: 100%;
         height:auto;
         background-image: url('../../assets/imgbanner.png');
@@ -240,11 +240,11 @@
 }
 
 
-@media (max-width: 576px) {
+@media (max-width: 576px) and (min-width: 320px) {
     .header {
         grid-column: 1/13;
         width: 100%;
-        height: 100vh;
+        height: 620px;
         background-image: url('../../assets/imgbanner.png');
         background-size: cover;
         background-position: top;
@@ -293,6 +293,7 @@
 
     .title{
       text-align: left;
+      font-size: 600;
       width: 20rem;
       padding-left: 2.5rem;  
     }
