--- a/src/components/header/Header.module.css
+++ b/src/components/header/Header.module.css
@@ -1,5 +1,6 @@
 @media (min-width: 1200px) {
     .header {
+        font-family: 'Roboto Condensed', sans-serif;
         grid-column: 1 / 13; 
         flex-direction: column; 
         display: grid;             
@@ -48,7 +49,7 @@
         align-items: center;
         width: 100%;
         height: 300px; 
-        font-size: 3rem;  
+        font-size: 3rem;         
         color: #6F2282;     
     }
 
@@ -56,11 +57,14 @@
       text-align: left;
       width: 30rem;
       padding-left: 6rem;  
+      font-weight: 300; 
+      text-transform: uppercase;
     }
 }
 
 @media (max-width: 1200px) and (min-width: 992px) {
     .header {
+        font-family: 'Roboto Condensed', sans-serif;
         grid-column: 1 /13;
         width: 100%;
         height: auto;
@@ -105,14 +109,16 @@
             align-items: center;
             width: 100%;
             height: 300px; 
-            font-size: 3rem;  
+            font-size: 3rem;
             color: #6F2282;     
         }
     
         .title{
-          text-align: left;
-          width: 30rem;
-          padding-left: 6rem;  
+            text-align: left;
+            width: 30rem;
+            padding-left: 6rem;  
+            font-weight: 300; 
+            text-transform: uppercase;
         }
 
     }
@@ -121,6 +127,7 @@
 
 @media (max-width: 992px) and (min-width: 768px) {
     .header {
+        font-family: 'Roboto Condensed', sans-serif;
         grid-column: 1 / 13;
         width: 100%;
         height: auto;
@@ -170,9 +177,11 @@
         }
     
         .title{
-          text-align: left;
-          width: 30rem;
-          padding-left: 6rem;  
+            text-align: left;
+            width: 30rem;
+            padding-left: 6rem;  
+            font-weight: 300; 
+            text-transform: uppercase;
         }
 
     }
@@ -181,6 +190,7 @@
 
 @media (max-width: 768px) and (min-width: 576px) {
     .header {
+        font-family: 'Roboto Condensed', sans-serif;
         grid-column: 1 / 13;
         width: 100%;
         height:auto;
@@ -232,9 +242,11 @@
     }
 
     .title{
-      text-align: left;
-      width: 20rem;
-      padding-left: 3rem;  
+        text-align: left;
+        width: 20rem;
+        padding-left: 3rem;  
+        font-weight: 300; 
+        text-transform: uppercase;
     }
 
 }
@@ -242,6 +254,7 @@
 
 @media (max-width: 576px) and (min-width: 320px) {
     .header {
+        font-family: 'Roboto Condensed', sans-serif;
         grid-column: 1/13;
         width: 100%;
         height: 620px;
@@ -292,10 +305,11 @@
     }
 
     .title{
-      text-align: left;
-      font-size: 600;
-      width: 20rem;
-      padding-left: 2.5rem;  
+        text-align: left;
+        width: 20rem;
+        padding-left: 2.5rem;  
+        font-weight: 300; 
+        text-transform: uppercase; 
     }
 }
 
