--- a/src/components/main/Main.module.css
+++ b/src/components/main/Main.module.css
@@ -1,5 +1,6 @@
 @media (min-width: 1200px) {
  .container{
+    font-family: "Roboto Condensed", sans-serif;    
         grid-column: 1 / 13;
         display: grid;
         grid-template-columns: repeat(12, 1fr);
@@ -7,6 +8,7 @@
         background-color: #6F2282;
         width: 100%;
         height: auto;
+        padding-bottom: 10rem;
     }    
     .box{
         grid-column: 1 / 3;
@@ -63,10 +65,11 @@
     .apresentacao h1{
         text-transform: uppercase;
         color: #FCBA5A;
+        font-weight: 400;
     }
     .apresentacao p{
         font-size: 1.25rem;
-        font-weight: 200;
+        font-weight: 300;
         color: #eee;
         text-align: left;
         text-indent: 2rem;
@@ -74,13 +77,13 @@
     }
     .contexto h1{
         text-transform: uppercase;
-        font-style: bold;
+        font-weight: 400;
         color: #FCBA5A;
         margin-top: 2rem;
     }
     .contexto p{
         font-size: 1.25rem;
-        font-weight: 200;
+        font-weight: 300;
         color: #eee;
         text-align: left;
         text-indent: 2rem;       
@@ -96,6 +99,7 @@
 }
  @media (max-width: 1200px) and (min-width:992px){
     .container{
+        font-family: "Roboto Condensed", sans-serif;    
         grid-column: 1 / 13;
         display: grid;
         grid-template-columns: repeat(12, 1fr);
@@ -103,6 +107,7 @@
         background-color: #6F2282;
         width: 100%;
         height: auto;
+        padding-bottom: 10rem;
     }    
     .box{
         grid-column: 1 / 3;
@@ -171,10 +176,11 @@
     .apresentacao h1{
         text-transform: uppercase;
         color: #FCBA5A;
+        font-weight: 400;
     }
     .apresentacao p{
         font-size: 1.25rem;
-        font-weight: 200;
+        font-weight: 300;
         color: #eee;
         text-align: left;
         text-indent: 2rem;
@@ -204,6 +210,7 @@
   }
  @media (max-width: 992px) and (min-width:768px){
     .container{
+        font-family: "Roboto Condensed", sans-serif;    
         grid-column: 1 / 13;
         display: grid;
         grid-template-columns: repeat(12, 1fr);
@@ -211,6 +218,7 @@
         background-color: #6F2282;
         width: 100%;
         height: auto;
+        padding-bottom: 10rem;
     }    
     .box{
         grid-column: 1 / 3;
@@ -278,11 +286,12 @@
     }
     .apresentacao h1{
         text-transform: uppercase;
+        font-weight: 400;
         color: #FCBA5A;
     }
     .apresentacao p{
         font-size: 1.25rem;
-        font-weight: 200;
+        font-weight: 300;
         color: #eee;
         text-align: left;
         text-indent: 2rem;
@@ -290,13 +299,13 @@
     }
     .contexto h1{
         text-transform: uppercase;
-        font-style: bold;
+        font-weight: 400;
         color: #FCBA5A;
         margin-top: 2rem;
     }
     .contexto p{
         font-size: 1.25rem;
-        font-weight: 200;
+        font-weight: 300;
         color: #eee;
         text-align: left;
         text-indent: 2rem;       
@@ -312,6 +321,7 @@
   }
  @media (max-width: 768px) and (min-width: 576px){
     .container{
+        font-family: "Roboto Condensed", sans-serif;    
         grid-column: 1 / 13;
         display: grid;
         grid-template-columns: repeat(12, 1fr);
@@ -319,6 +329,7 @@
         background-color: #6F2282;
         width: 100%;
         height: auto;
+        padding-bottom: 10rem;
     }    
     .box{
         grid-column: 1 / 3;
@@ -388,11 +399,12 @@
     }
     .apresentacao h1{
         text-transform: uppercase;
+        font-weight: 500;
         color: #FCBA5A;
     }
     .apresentacao p{
         font-size: 2rem;
-        font-weight: 600;
+        font-weight: 400;
         color: #eee;
         text-align: left;
         text-indent: 2rem;
@@ -400,13 +412,13 @@
     }
     .contexto h1{
         text-transform: uppercase;
-        font-style: bold;
+        font-weight: 500;
         color: #FCBA5A;
         margin-top: 2rem;
     }
     .contexto p{
         font-size: 2rem;
-        font-weight: 600;
+        font-weight: 400;
         color: #eee;
         text-align: left;
         text-indent: 2rem;       
@@ -422,6 +434,7 @@
   }
  @media (max-width: 576px) and (min-width: 320px){
     .container{
+        font-family: "Roboto Condensed", sans-serif;    
         grid-column: 1 / 13;
         display: grid;
         grid-template-columns: repeat(12, 1fr);
@@ -429,6 +442,7 @@
         background-color: #6F2282;
         width: 100%;
         height: auto;
+        padding-bottom: 10rem;
     }    
     .box{
        display: none;
