--- a/src/components/podcast/Podcast.module.css
+++ b/src/components/podcast/Podcast.module.css
@@ -6,22 +6,91 @@
 .podcastcontainer {
     display: grid;
     grid-template-columns: repeat(12, 1fr);
-    background-color: rgb(70, 27, 244);
+    grid-template-rows: 50px 300px 50px;
+    background-color: #FCBA5A;
     width: 100%;
-    height: 400px;
+    height: 26rem;
 }
 
 .formasDir {
-    grid-column: 12 ;
-    width: 100%;
-    height: auto;
-    background-color: black;
-
+    grid-column: 12 /13;
+    grid-row: 1/4;
+    background-image: url('../../assets/formaLinhasBrancoDir.png');
 }
 
-.formasEsq{
-    grid-column: 1 ;
-    width: 100%;
-    height: auto;
-    background-color: black;
+.formasEsq {
+    grid-column: 1 /2;
+    grid-row: 1/4;
+    background-image: url('../../assets/formaLinhasBrancoEsq.png');
+}
+
+.playercontainer {
+    display: flex; 
+    flex-wrap: wrap;
+    grid-column: 4 /10;
+    grid-row: 2 / 3;
+    border: 3px solid #6F2282;  
+   
+    .box01{
+        display: flex;
+        flex:1 1 100%;
+        height: 6rem;           
+        /* background-color: #d4b9da; */
+        margin-bottom: -5px;
+        img{
+            width: 6rem;
+            height: 6rem;
+            margin-right: 10px;
+            
+        }
+    }
+       
+    .textoBox01{
+        flex: 1;
+        font-size: 1.2rem;
+        align-content: center;
+        font-weight:600;
+        color: #6F2282;
+        text-transform: uppercase;
+        text-align: left;
+        
+    }
+
+
+    .box02{
+        display: flex;
+        flex:1 1 100%;
+        height: 6rem;       
+        /* background-color: #851e9c; */
+
+        img{
+            margin-left: 96px;
+            width: 6rem;
+            height: 6rem;
+            margin-right: 10px;
+        }  
+    }
+
+    .textoBox02{
+        flex: 1;
+        background-color: #d4b9da;
+        align-content: flex-start;
+        font-size: 1rem;
+        margin: 0;
+        text-align: left;
+    }
+
+    .box03{
+        display: flex;
+        flex:1 1 100%;
+        height: 6rem;       
+        /* background-color: #851e9c; */
+
+        img{
+            width: 6rem;
+            height: 6rem;
+            margin-right: 8px;
+        }
+    }
+
 }
