--- a/src/components/header/Header.module.css
+++ b/src/components/header/Header.module.css
@@ -6,7 +6,7 @@
         display: grid;             
         width: 100%;
         height: auto;
-        background-image: url('../../assets/imgbanner.png');
+        background-image: url('../../assets/BannerHeader.svg');
         background-repeat: no-repeat;
         background-size: cover;
         background-position: top;
@@ -68,7 +68,7 @@
         grid-column: 1 /13;
         width: 100%;
         height: auto;
-        background-image: url('../../assets/imgbanner.png');
+        background-image: url('../../assets/BannerHeader.svg');
         background-repeat: no-repeat;
         background-size: cover;
         background-position: top;
@@ -131,7 +131,7 @@
         grid-column: 1 / 13;
         width: 100%;
         height: auto;
-        background-image: url('../../assets/imgbanner.png');
+        background-image: url('../../assets/BannerHeader.svg');
         background-repeat: no-repeat;
         background-size: cover;
         background-position: top;
@@ -194,7 +194,7 @@
         grid-column: 1 / 13;
         width: 100%;
         height:auto;
-        background-image: url('../../assets/imgbanner.png');
+        background-image: url('../../assets/BannerHeader.svg');
         background-repeat: no-repeat;
         background-size: cover;
         background-position: top;
@@ -258,7 +258,7 @@
         grid-column: 1/13;
         width: 100%;
         height: 620px;
-        background-image: url('../../assets/imgbanner.png');
+        background-image: url('../../assets/BannerHeader.svg');
         background-size: cover;
         background-position: top;
         background-repeat: no-repeat;
