--- a/src/components/podcast/Podcast.module.css
+++ b/src/components/podcast/Podcast.module.css
@@ -1,5 +1,6 @@
 .podcast {
     grid-column: 1 / 13;
+    font-family: "Roboto Condensed", sans-serif;
 }
 
 
@@ -9,7 +10,7 @@
     grid-template-rows: 50px 300px 50px;
     background-color: #FCBA5A;
     width: 100%;
-    height: 26rem;
+    height: auto;
 }
 
 .formasDir {
@@ -35,19 +36,14 @@
         display: flex;
         flex:1 1 100%;
         height: 6rem;           
-        /* background-color: #d4b9da; */
-        margin-bottom: -5px;
-        img{
-            width: 6rem;
-            height: 6rem;
-            margin-right: 10px;
-            
-        }
+        /* margin-bottom: -5px;     */
     }
-       
+   
     .textoBox01{
         flex: 1;
         font-size: 1.2rem;
+        letter-spacing: 1px;
+        font-weight: 600;
         align-content: center;
         font-weight:600;
         color: #6F2282;
@@ -73,24 +69,20 @@
 
     .textoBox02{
         flex: 1;
-        background-color: #d4b9da;
         align-content: flex-start;
         font-size: 1rem;
         margin: 0;
         text-align: left;
+        color: #6F2282;
     }
 
     .box03{
         display: flex;
+        justify-content: center;
+        align-self: center;
+        align-items: flex-start;
         flex:1 1 100%;
-        height: 6rem;       
-        /* background-color: #851e9c; */
-
-        img{
-            width: 6rem;
-            height: 6rem;
-            margin-right: 8px;
-        }
+        height: 3rem; 
+        margin-bottom: 1rem;      
     }
-
-}
+  }
