--- a/src/components/header/Header.module.css
+++ b/src/components/header/Header.module.css
@@ -27,7 +27,7 @@
     }
 
     .borda_laranja{
-        width: 6rem;    
+        width: auto;    
         height: 5rem;
     }
 
@@ -87,7 +87,7 @@
         }
     
         .borda_laranja{
-            width: 6rem;    
+            width: auto;    
             height: 5rem;
         }
     
@@ -150,7 +150,7 @@
         }
     
         .borda_laranja{
-            width: 6rem;    
+            width: auto;    
             height: 5rem;
         }
     
@@ -215,10 +215,9 @@
     }
 
     .borda_laranja{
-        width: 6rem;    
+        width: auto;    
         height: 5rem;
     }
-
     .box02{
         display: flex;
         align-items: end;
@@ -278,7 +277,7 @@
     }
 
     .borda_laranja{
-        width: 6rem;    
+        width: auto;    
         height: 5rem;
     }
 
