--- a/src/components/podcast/Podcast.module.css
+++ b/src/components/podcast/Podcast.module.css
@@ -1,88 +1,263 @@
-.podcast {
-    grid-column: 1 / 13;
-    font-family: "Roboto Condensed", sans-serif;
-}
-
-
-.podcastcontainer {
-    display: grid;
-    grid-template-columns: repeat(12, 1fr);
-    grid-template-rows: 50px 300px 50px;
-    background-color: #FCBA5A;
-    width: 100%;
-    height: auto;
-}
-
-.formasDir {
-    grid-column: 12 /13;
-    grid-row: 1/4;
-    background-image: url('../../assets/formaLinhasBrancoDir.png');
-}
-
-.formasEsq {
-    grid-column: 1 /2;
-    grid-row: 1/4;
-    background-image: url('../../assets/formaLinhasBrancoEsq.png');
-}
-
-.playercontainer {
-    display: flex; 
-    flex-wrap: wrap;
-    grid-column: 4 /10;
-    grid-row: 2 / 3;
-    border: 3px solid #6F2282;  
-   
-    .box01{
-        display: flex;
-        flex:1 1 100%;
-        height: 6rem;           
-        /* margin-bottom: -5px;     */
-    }
-   
-    .textoBox01{
-        flex: 1;
-        font-size: 1.2rem;
-        letter-spacing: 1px;
-        font-weight: 600;
-        align-content: center;
-        font-weight:600;
-        color: #6F2282;
-        text-transform: uppercase;
-        text-align: left;
-        
+@media (min-width:1200px) {
+    .podcast {
+        grid-column: 1 / 13;
+        font-family: "Roboto Condensed", sans-serif;
     }
 
 
-    .box02{
-        display: flex;
-        flex:1 1 100%;
-        height: 6rem;       
-        /* background-color: #851e9c; */
+    .podcastcontainer {
+        display: grid;
+        grid-template-columns: repeat(12, 1fr);
+        grid-template-rows: 50px 300px 50px;
+        background-color: #FCBA5A;
+        width: 100%;
+        height: auto;
+    }
 
-        img{
+    .formasDir {
+        grid-column: 12 /13;
+        grid-row: 1/4;
+        background-image: url('../../assets/ArrowArtRig.svg');
+    }
+
+    .formasEsq {
+        grid-column: 1 /2;
+        grid-row: 1/4;
+        background-image: url('../../assets/ArrowArtLef.svg');
+    }
+
+    .playercontainer {
+        display: flex;
+        flex-direction: column;
+        grid-column: 4 /10;
+        grid-row: 2 / 3;
+        border: 3px solid #6F2282;
+
+        .box01 {
+            display: flex;
+        }
+
+        .textoBox01 {
+            font-family: 'Roboto', sans-serif;
+            font-size: 1.2rem;
+            margin-left: 20px;
+            letter-spacing: 1px;
+            font-weight: 500;
+            align-content: center;
+            color: #6F2282;
+            text-transform: uppercase;
+            text-align: left;
+        }
+
+        .box02 {
+            display: flex;
+            flex: 1 1 100%;
+            height: auto;
+            /* background-color: #851e9c; */
+        }
+
+        .box02 img {
             margin-left: 96px;
             width: 6rem;
             height: 6rem;
             margin-right: 10px;
-        }  
+        }
+
+        .textoBox02 {
+            /* flex: 1; */
+            align-content: flex-start;
+            font-size: 1rem;
+            margin: 0;
+            text-align: left;
+            color: #6F2282;
+        }
+
+        .box03 {
+            display: flex;
+            justify-content: center;
+            align-self: center;
+            align-items: center;
+            flex: 1 1 100%;
+            height: 3rem;
+            margin-bottom: 1rem;
+        }
+    }
+}
+
+@media (max-width: 1200px) and (min-width: 992px) {
+    .podcast {
+        grid-column: 1 / 13;
+        font-family: "Roboto Condensed", sans-serif;
     }
 
-    .textoBox02{
-        flex: 1;
-        align-content: flex-start;
-        font-size: 1rem;
-        margin: 0;
-        text-align: left;
-        color: #6F2282;
+
+    .podcastcontainer {
+        display: grid;
+        grid-template-columns: repeat(12, 1fr);
+        grid-template-rows: 50px 300px 50px;
+        background-color: #FCBA5A;
+        width: 100%;
+        height: auto;
     }
 
-    .box03{
+    .formasDir {
+        grid-column: 12 /13;
+        grid-row: 1/4;
+        background-image: url('../../assets/ArrowArtRig.svg');
+    }
+
+    .formasEsq {
+        grid-column: 1 /2;
+        grid-row: 1/4;
+        background-image: url('../../assets/ArrowArtLef.svg');
+    }
+
+    .playercontainer {
         display: flex;
-        justify-content: center;
-        align-self: center;
-        align-items: flex-start;
-        flex:1 1 100%;
-        height: 3rem; 
-        margin-bottom: 1rem;      
+        flex-direction: column;
+        /* flex-wrap: wrap; */
+        grid-column: 4 /10;
+        grid-row: 2 / 3;
+        border: 3px solid #6F2282;
+
+        .box01 {
+            display: flex;
+        }
+
+        .textoBox01 {
+            font-size: 1.2rem;
+            letter-spacing: 1px;
+            font-weight: 600;
+            align-content: center;
+            font-weight: 600;
+            color: #6F2282;
+            text-transform: uppercase;
+            text-align: left;
+        }
+
+        .box02 {
+            display: flex;
+            flex: 1 1 100%;
+            height: auto;
+            /* background-color: #851e9c; */
+        }
+
+        .box02 img {
+            margin-left: 96px;
+            width: 6rem;
+            height: 6rem;
+            margin-right: 10px;
+        }
+
+        .textoBox02 {
+            /* flex: 1; */
+            align-content: flex-start;
+            font-size: 1rem;
+            margin: 0;
+            text-align: left;
+            color: #6F2282;
+        }
+
+        .box03 {
+            display: flex;
+            justify-content: center;
+            align-self: center;
+            align-items: center;
+            flex: 1 1 100%;
+            height: 3rem;
+            margin-bottom: 1rem;
+        }
     }
-  }
+}
+
+@media (max-width: 992px) and (min-width: 768px) {
+    .podcast {
+        grid-column: 1 / 13;
+        font-family: "Roboto Condensed", sans-serif;
+    }
+
+
+    .podcastcontainer {
+        display: grid;
+        grid-template-columns: repeat(12, 1fr);
+        grid-template-rows: 50px 300px 50px;
+        background-color: #FCBA5A;
+        width: 100%;
+        height: auto;
+    }
+
+    .formasDir {
+        grid-column: 12 /13;
+        grid-row: 1/4;
+        background-image: url('../../assets/ArrowArtRig.svg');
+    }
+
+    .formasEsq {
+        grid-column: 1 /2;
+        grid-row: 1/4;
+        background-image: url('../../assets/ArrowArtLef.svg');
+    }
+
+    .playercontainer {
+        display: flex;
+        flex-direction: column;
+        /* flex-wrap: wrap; */
+        grid-column: 4 /10;
+        grid-row: 2 / 3;
+        border: 3px solid #6F2282;
+
+        .box01 {
+            display: flex;
+            height: 6rem;
+            /* margin-bottom: -5px;     */
+        }
+
+        .textoBox01 {
+            font-size: 1.2rem;
+            letter-spacing: 1px;
+            font-weight: 600;
+            align-content: center;
+            font-weight: 600;
+            color: #6F2282;
+            text-transform: uppercase;
+            text-align: left;
+        }
+
+        .box02 {
+            display: flex;
+            flex: 1 1 100%;
+            height: auto;
+            /* background-color: #851e9c; */
+        }
+
+        .box02 img {
+            margin-left: 96px;
+            width: 6rem;
+            height: 6rem;
+            margin-right: 10px;
+        }
+
+        .textoBox02 {
+            /* flex: 1; */
+            align-content: flex-start;
+            font-size: 1rem;
+            margin: 0;
+            text-align: left;
+            color: #6F2282;
+        }
+
+        .box03 {
+            display: flex;
+            justify-content: center;
+            align-self: center;
+            align-items: center;
+            flex: 1 1 100%;
+            height: 3rem;
+            margin-bottom: 1rem;
+        }
+    }
+}
+
+@media (max-width: 768px) and (min-width: 576px) {}
+
+@media (max-width: 576px) and (min-width: 320px) {}
