--- a/src/components/main/boxes/GrayBox.module.css
+++ b/src/components/main/boxes/GrayBox.module.css
@@ -1,4 +1,77 @@
-.boxContainer{
-    grid: 1 / 10;
-    background-color: aquamarine;
+.boxContainer {
+    font-family: 'Roboto Condensed', sans-serif;
+    grid-column: 1 /13;
+    background-color: #555555;
+    display: grid;
+    grid-template-columns: repeat(12, 1fr);
+    grid-template-rows: auto 5rem;
+    height: 20rem;
 }
+
+.containerflag{
+    grid-column: 4 / 10;
+    grid-row: 1 /3 ;
+    display: grid;
+    height: auto;
+    margin-top: 3rem;
+    grid-template-columns: repeat(5, 1fr);
+    grid-template-rows: .2rem 6.25rem 8rem;
+    /* border: 2px solid black; */
+   
+}
+.containerflag h1{
+    grid-column: 1 / 6;
+    grid-row: 2;
+    color: #eee;
+    font-size: 2rem;
+    font-weight: 400;
+}
+
+.introTxt{
+    grid-column: 1 /6;
+    grid-row: 3 / 4;
+    align-self: flex-start;
+    color: white;
+    text-indent: 40px;
+    font-weight: 350;
+}
+
+.boxflag{
+    grid-column: 5 /6 ;
+    grid-row: 2;
+    width: 6.25rem;
+    height: 6.25rem;
+    background-color: #FCBA5A;
+    justify-self: end;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.boxflag img{
+ width:3rem;
+ height: 3rem;   
+}
+
+.containerflag p{
+    grid-column: 1;
+    grid-row: 2;
+}
+
+.lines{
+    grid-column: 1 / 6;
+    display: flex;
+}
+
+.lineWhite{
+    width: 70%;
+    height: 5px;
+    background-color: #eee;
+}
+
+.lineOrange{
+    width: 30%;
+    height: 5px;
+    background-color: #FCBA5A;
+}
+
