--- a/src/components/questionario/Questinario.module.css
+++ b/src/components/questionario/Questinario.module.css
@@ -9,17 +9,89 @@
     background-color:#6F2282 ;
 }
 
-.headerQuestionario{
+.headerContent{
     grid-column: 4/10;
     grid-row: 2;
     display: flex;
     justify-content: space-between;
-    background-color: aliceblue;
+    align-content: stretch;
+    /* background-color: #FCBA5A; */
 }
+
+.headerTitle{
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    justify-content: end;
+    /* background-color:rgb(163, 125, 76) ; */
+    border-top: .25rem solid #eee;
+}
+
+.title{
+    /* border: 2px solid black;
+    background-color: bisque; */
+    font-size: 2rem;
+    text-transform: uppercase;
+    color: #eee;
+}
+
+.subtitle{
+    font-size: 1.5rem;
+    text-transform: uppercase;
+    font-style: italic;
+    color: #eee;
+    /* border: 2px solid black;
+    background-color: bisque; */
+}
+
+.flagBox{
+    width: 12.5rem;
+    height:  auto;
+    display: flex;
+    justify-content: end;
+    align-content: center;
+    border-top: .25rem solid #FCBA5A;
+}
+
+.flag{
+    display:flex;
+    width: 6.25rem;
+    justify-content: center;
+    background-color:#FCBA5A;
+}
+
+.flagBox img{
+    background-color:#FCBA5A;
+    width: 3.12rem;
+}
+
 
 .questionario{
     grid-column: 4 / 10;
     grid-row: 3;
-    background-color:aquamarine ;
+    /* background-color: antiquewhite; */
 }
 
+.question{
+    background-color: aliceblue;
+}
+
+.questionario{
+    color: #eee;
+}
+
+.questionario p>span{
+    color: #FCBA5A;
+}
+
+.boxImages{
+    display: flex;
+    gap: 1.5rem;
+    /* width: 100%; */
+}
+
+.boxImages img{
+    width: 100%;
+    object-fit: contain;
+    overflow: hidden;
+}
