--- a/src/components/questionario/Questinario.module.css
+++ b/src/components/questionario/Questinario.module.css
@@ -5,7 +5,7 @@
     grid-template-columns: repeat(12, 1fr);
     grid-template-rows: repeat(12, 1fr);
     width: 100%;
-    height: 70rem;
+    height: 60rem;
     background-color:#6F2282 ;
 }
 
@@ -15,6 +15,7 @@
     display: flex;
     justify-content: space-between;
     align-content: stretch;
+    margin: 3.1rem 0;
     /* background-color: #FCBA5A; */
 }
 
@@ -23,7 +24,7 @@
     display: flex;
     flex-direction: column;
     justify-content: end;
-    /* background-color:rgb(163, 125, 76) ; */
+    padding-top: 30px;
     border-top: .25rem solid #eee;
 }
 
@@ -36,9 +37,10 @@
 }
 
 .subtitle{
-    font-size: 1.5rem;
+    font-size: 1.2rem;
     text-transform: uppercase;
     font-style: italic;
+    font-weight: 300;
     color: #eee;
     /* border: 2px solid black;
     background-color: bisque; */
@@ -76,6 +78,16 @@
     background-color: aliceblue;
 }
 
+.question p{
+    font-family: 'Roboto Condensed', sans-serif;
+    font-weight: 300;
+}
+.question span{
+    font-family: 'Roboto Condensed', sans-serif;
+    font-weight: 300;
+    color: #FCBA5A;
+}
+
 .questionario{
     color: #eee;
 }
@@ -95,3 +107,85 @@
     object-fit: contain;
     overflow: hidden;
 }
+
+.boxImages span{
+    display: block;
+    text-align: center;
+    margin-top: .2rem;
+}
+
+.quiz_container {
+    grid-column: 4 /10;
+    justify-content: start;
+    align-content: start;
+  }
+  
+  .question_section {
+    margin: 2rem 0;
+  }
+  
+  .question_count {
+    /* margin-bottom: 10px; */
+  }
+  
+  .question_text {
+    font-family: 'Roboto Condensed', sans-serif;
+    font-weight: 400;
+    font-size: 1rem;
+  }
+  
+  .answer_section{
+    font-family: 'Roboto Condensed', sans-serif;
+    font-weight: 300;
+    display: flex;
+    align-items: start;
+    flex-direction: column;
+    gap: 1.8rem;    
+    /* background-color: #FCBA5A; */
+  }
+  
+  .answer_section button {
+    align-self: center;
+    width:17.9rem ;
+    height:3.5rem;    
+    font-style: italic;
+    color: #6F2282;
+    border: none;
+    text-transform: uppercase;
+    border-radius: 30px;
+    cursor: pointer;
+  }
+
+  .selected {
+    font-weight: bold;
+  }
+  
+  .submit_button {
+    margin-top: 20px;
+    font-size: 16px;
+    padding: 10px 20px;
+    cursor: pointer;
+  }
+  
+  .modal {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 1000;
+    width: 200px;
+    height: 100px;
+    background-color: #fff;
+    text-align: center;
+    padding: 20px;
+    box-shadow: 0 0 15px rgba(0,0,0,0.5);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 24px;
+  }
+
+  input[type="radio"]:checked{
+    color: #6F2282;
+    background-color: #6F2282;
+  }
