--- a/src/components/questionario/Questinario.module.css
+++ b/src/components/questionario/Questinario.module.css
@@ -173,19 +173,27 @@
     left: 50%;
     transform: translate(-50%, -50%);
     z-index: 1000;
-    width: 200px;
-    height: 100px;
-    background-color: #fff;
+    /* width: 200px; */
+    /* height: 100px; */
+    /* background-color: #fff; */
     text-align: center;
     padding: 20px;
     box-shadow: 0 0 15px rgba(0,0,0,0.5);
     display: flex;
     justify-content: center;
     align-items: center;
-    font-size: 24px;
+    /* font-size: 24px; */
   }
 
   input[type="radio"]:checked{
     color: #6F2282;
     background-color: #6F2282;
   }
+
+  .radio_label.correct {
+    background-color: green;
+}
+
+.radio_label.wrong {
+    background-color: red;
+}
