--- a/src/components/podcast/Podcast.module.css
+++ b/src/components/podcast/Podcast.module.css
@@ -63,7 +63,7 @@
             margin-right: 10px;
         }
 
-        .textoBox02 {
+        .title {
             /* flex: 1; */
             align-content: flex-start;
             font-size: 1rem;
@@ -71,6 +71,17 @@
             text-align: left;
             color: #6F2282;
         }
+
+        .curso{
+
+        }
+        .unidade{
+
+        }
+        .modulo{
+            
+        }
+
 
         .box03 {
             display: flex;
