--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 
 .App {
-  font-family: "Roboto", sans-serif;
+  font-family: "Roboto Condensed", sans-serif;
   display: grid;
   width: auto;
   height: auto;
@@ -11,4 +11,10 @@
   box-sizing: border-box;
   padding: 0;
   margin: 0;
+}
+
+*,
+*::before,
+*::after {
+    box-sizing: border-box;
 }
