--- a/src/components/podcast/Podcast.module.css
+++ b/src/components/podcast/Podcast.module.css
@@ -1,286 +1,71 @@
-@media (min-width:1200px) {
-    .podcast {
-        grid-column: 1 / 13;
-        font-family: "Roboto Condensed", sans-serif;
-    }
+.podcast{
+    grid-column: 1 / 13;
+    display: grid;
+    grid-template-columns: repeat(12, 1fr);
+    background-color: #FCBA5A; 
+    align-items: center;
+    box-sizing: border-box;
+}
+.arrowLeft{
+    grid-column: 1 / 2;
+    justify-self: stretch;
+    width:6rem;
+    justify-self: start;
+}    
 
-
-    .podcastcontainer {
-        display: grid;
-        grid-template-columns: repeat(12, 1fr);
-        grid-template-rows: 50px 300px 50px;
-        background-color: #FCBA5A;
-        width: 100%;
-        height: auto;
-    }
-
-    .formasDir {
-        grid-column: 12 /13;
-        grid-row: 1/4;
-        background-image: url('../../assets/ArrowArtRig.svg');
-    }
-
-    .formasEsq {
-        grid-column: 1 /2;
-        grid-row: 1/4;
-        background-image: url('../../assets/ArrowArtLef.svg');
-    }
-
-    .playercontainer {
-        display: flex;
-        flex-direction: column;
-        grid-column: 4 /10;
-        grid-row: 2 / 3;
-        border: 3px solid #6F2282;
-
-        .box01 {
-            display: flex;
-        }
-
-        .textoBox01 {
-            font-family: 'Roboto', sans-serif;
-            font-size: 1.2rem;
-            margin-left: 20px;
-            letter-spacing: 1px;
-            font-weight: 500;
-            align-content: center;
-            color: #6F2282;
-            text-transform: uppercase;
-            text-align: left;
-        }
-
-        .box02 {
-            display: flex;
-            flex: 1 1 100%;
-            height: auto;
-            /* background-color: #851e9c; */
-        }
-
-        .box02 img {
-            margin-left: 96px;
-            width: 6rem;
-            height: 6rem;
-            margin-right: 10px;
-        }
-
-        .title {
-            /* flex: 1; */
-            align-content: flex-start;
-            font-size: 1rem;
-            margin: 0;
-            text-align: left;
-            color: #6F2282;
-        }
-
-        .textoBox02{
-            font-family: 'Roboto', sans-serif;
-            font-size: 1rem;
-            margin-left: 20px;
-            letter-spacing: 1px;
-            font-weight: 500;
-            align-content: center;
-            color: #6F2282;
-            text-transform: uppercase;
-            text-align: left;
-        }
-
-        .curso{
-
-        }
-        .unidade{
-
-        }
-        .modulo{
-
-        }
-
-
-        .box03 {
-            display: flex;
-            justify-content: center;
-            align-self: center;
-            align-items: center;
-            flex: 1 1 100%;
-            height: 3rem;
-            margin-bottom: 1rem;
-        }
-    }
+.arrowRigth{
+    grid-column: 12 / 13;
+    justify-self: stretch;
+    width:6rem;
+    justify-self: end;
+}
+.container{
+    grid-column: 4 / 10;
+    grid-row: 1;    
+    display: grid;
+    /* width: 50rem; */
+    grid-template-columns: 6rem 6rem 1fr;
+    grid-template-rows: 6rem 6rem 6rem;
+    border: 2px solid purple;
+    
 }
 
-@media (max-width: 1200px) and (min-width: 992px) {
-    .podcast {
-        grid-column: 1 / 13;
-        font-family: "Roboto Condensed", sans-serif;
-    }
-
-
-    .podcastcontainer {
-        display: grid;
-        grid-template-columns: repeat(12, 1fr);
-        grid-template-rows: 50px 300px 50px;
-        background-color: #FCBA5A;
-        width: 100%;
-        height: auto;
-    }
-
-    .formasDir {
-        grid-column: 12 /13;
-        grid-row: 1/4;
-        background-image: url('../../assets/ArrowArtRig.svg');
-    }
-
-    .formasEsq {
-        grid-column: 1 /2;
-        grid-row: 1/4;
-        background-image: url('../../assets/ArrowArtLef.svg');
-    }
-
-    .playercontainer {
-        display: flex;
-        flex-direction: column;
-        /* flex-wrap: wrap; */
-        grid-column: 4 /10;
-        grid-row: 2 / 3;
-        border: 3px solid #6F2282;
-
-        .box01 {
-            display: flex;
-        }
-
-        .textoBox01 {
-            font-size: 1.2rem;
-            letter-spacing: 1px;
-            font-weight: 600;
-            align-content: center;
-            font-weight: 600;
-            color: #6F2282;
-            text-transform: uppercase;
-            text-align: left;
-        }
-
-        .box02 {
-            display: flex;
-            flex: 1 1 100%;
-            height: auto;
-            /* background-color: #851e9c; */
-        }
-
-        .box02 img {
-            margin-left: 96px;
-            width: 6rem;
-            height: 6rem;
-            margin-right: 10px;
-        }
-
-        .textoBox02 {
-            /* flex: 1; */
-            align-content: flex-start;
-            font-size: 1rem;
-            margin: 0;
-            text-align: left;
-            color: #6F2282;
-        }
-
-        .box03 {
-            display: flex;
-            justify-content: center;
-            align-self: center;
-            align-items: center;
-            flex: 1 1 100%;
-            height: 3rem;
-            margin-bottom: 1rem;
-        }
-    }
+.iconPodcast{
+    grid-column: 1;
+    width: 100%;
+    overflow: hidden;
+    /* max-width: 6rem;
+    max-height: 6rem; */
 }
 
-@media (max-width: 992px) and (min-width: 768px) {
-    .podcast {
-        grid-column: 1 / 13;
-        font-family: "Roboto Condensed", sans-serif;
-    }
-
-
-    .podcastcontainer {
-        display: grid;
-        grid-template-columns: repeat(12, 1fr);
-        grid-template-rows: 50px 300px 50px;
-        background-color: #FCBA5A;
-        width: 100%;
-        height: auto;
-    }
-
-    .formasDir {
-        grid-column: 12 /13;
-        grid-row: 1/4;
-        background-image: url('../../assets/ArrowArtRig.svg');
-    }
-
-    .formasEsq {
-        grid-column: 1 /2;
-        grid-row: 1/4;
-        background-image: url('../../assets/ArrowArtLef.svg');
-    }
-
-    .playercontainer {
-        display: flex;
-        flex-direction: column;
-        /* flex-wrap: wrap; */
-        grid-column: 4 /10;
-        grid-row: 2 / 3;
-        border: 3px solid #6F2282;
-
-        .box01 {
-            display: flex;
-            height: 6rem;
-            /* margin-bottom: -5px;     */
-        }
-
-        .textoBox01 {
-            font-size: 1.2rem;
-            letter-spacing: 1px;
-            font-weight: 600;
-            align-content: center;
-            font-weight: 600;
-            color: #6F2282;
-            text-transform: uppercase;
-            text-align: left;
-        }
-
-        .box02 {
-            display: flex;
-            flex: 1 1 100%;
-            height: auto;
-            /* background-color: #851e9c; */
-        }
-
-        .box02 img {
-            margin-left: 96px;
-            width: 6rem;
-            height: 6rem;
-            margin-right: 10px;
-        }
-
-        .textoBox02 {
-            /* flex: 1; */
-            align-content: flex-start;
-            font-size: 1rem;
-            margin: 0;
-            text-align: left;
-            color: #6F2282;
-        }
-
-        .box03 {
-            display: flex;
-            justify-content: center;
-            align-self: center;
-            align-items: center;
-            flex: 1 1 100%;
-            height: 3rem;
-            margin-bottom: 1rem;
-        }
-    }
+.logoSenaiPlay{
+    grid-column: 2;
+    width: 100%;
+    overflow: hidden;
 }
 
-@media (max-width: 768px) and (min-width: 576px) {}
+.audioPlayer{
+    grid-column: 1 / 6;
+    grid-row: 3;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
 
-@media (max-width: 576px) and (min-width: 320px) {}
+.container span{
+    font-family: 'Roboto', sans-serif;
+    grid-column: 2 / 6;
+    margin-left: 2rem;
+    align-self: center;
+    font-weight: bold;
+    color:#6F2282;
+    font-size: 1.25rem;
+}
+
+.container p{
+    grid-column: 3 /4;
+    grid-row: 2;
+    align-self: stretch;
+    color: #6F2282;
+    padding-left: 2rem; 
+}
